syntax = "proto3";

package proto.v1;

option go_package = "github.com/ei-sugimoto/godis/proto/v1;v1";

service RecordService {
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Bulk(BulkRequest) returns (BulkResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool ok = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message BulkRequest {
  repeated SetRequest requests = 1;
}

message BulkResponse {
  bool ok = 1;
}
